--- a/public/sqcr-demo/css/slides.css
+++ b/public/sqcr-demo/css/slides.css
@@ -1,8 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i|Roboto+Mono:400,400i,700,700i');
 
+/**
+ * Color Pallette:
+ * 1 - #ccfa99
+ * 2 - #faf099
+ * 3 - #99f0fa
+ * 4 - #fa99f0
+ * 5 - #cc99fa
+ *
+ */
+
 :root {
-    --main-bg-color: #000000;
-    --main-text-color: #ffffff;
+    /* --main-bg-color: #000000; */
+    --main-bg-color: #fa99f0;
+    /* --main-text-color: #ffffff; */
+    --main-text-color: #000000;
     --code-bg-color: #222222;
     --code-text-color: #ffffff;
 }
