--- a/public/sqcr-demo/styles.css
+++ b/public/sqcr-demo/styles.css
@@ -1,3 +1,13 @@
+/**
+ * Color Pallette:
+ * 1 - #ccfa99
+ * 2 - #faf099
+ * 3 - #99f0fa
+ * 4 - #fa99f0
+ * 5 - #cc99fa
+ *
+ */
+
 div {
     min-height: 15px;
 }
@@ -14,4 +24,45 @@ div {
 
 .icon-link {
     text-decoration: none;
+}
+
+.colorize {
+    background-color: #faf099;
+}
+
+.colorize-0 {
+    background-color: #ff0000;
+}
+
+.colorize-1 {
+    background-color: #ccfa99;
+}
+
+.colorize-2 {
+    background-color: #faf099;
+}
+
+.colorize-3 {
+    background-color: #99f0fa;
+}
+
+.colorize-4 {
+    background-color: #fa99f0;
+    /* filter: blur(2px); */
+}
+
+.colorize-1.colorize-3 {
+    background-color: orange;
+}
+
+.colorize-2.colorize-3 {
+    background-color: green;
+}
+
+.colorize-4.colorize-1 {
+    background-color: teal;
+}
+
+.colorize-2.colorize-1 {
+    background-color: orange;
 }
